[package]
name = "naga-test"
version = "0.1.0"
edition = "2018"
authors = ["Jed Pommert (Kneelawk) <kneelawk@gmail.com>"]
description = '''
This bin is just me messing around with generating shaders
'''

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "^1.7.2"
cgmath = "^0.18.0"
dotenv = "^0.15.0"
env_logger = "^0.8.4"
futures = "^0.3.15"
image = "^0.23.14"
log = "^0.4.14"
naga = { git = "https://github.com/gfx-rs/naga.git", branch = "master", features = ["wgsl-in", "wgsl-out", "glsl-out", "spv-out"] }
num-complex = "^0.4.0"
tokio = { version = "^1.7.0", features = ["rt", "io-util", "macros", "fs"] }
wgpu = "^0.8.1"
